--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint:watch": "yarn lint -- --watch",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "prestart": "yarn db:migrate",
-    "precommit": "npm run lint",
     "db:migrate": "sequelize db:migrate"
   },
   "repository": {
@@ -47,6 +46,7 @@
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
+    "crypto": "1.0.1",
     "debug": "3.1.0",
     "dotenv": "6.0.0",
     "express": "4.16.3",
@@ -60,6 +60,7 @@
     "method-override": "2.3.10",
     "morgan": "1.9.0",
     "mysql2": "1.5.3",
+    "nodemailer": "4.7.0",
     "sequelize": "4.37.10"
   },
   "devDependencies": {
