--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:watch": "yarn lint -- --watch",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "prestart": "yarn db:migrate",
-    "db:migrate": "sequelize db:migrate"
+    "db:migrate": "sequelize db:migrate",
+    "migration:create" : "sequelize migration:create --name"
   },
   "repository": {
     "type": "git",
@@ -71,7 +72,6 @@
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.12.0",
     "eslint-watch": "3.1.5",
-    "husky": "0.14.3",
     "sequelize-cli": "4.0.0"
   }
 }
